--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,16 @@
   <head>
       <script>
         window.__RUNTIME_CONFIG__ = {
-          VITE_API_BASE_URL: '%%VITE_API_BASE_URL%%'
+          API_BASE_URL: '%%VITE_API_BASE_URL%%',
+          WS_PORT: '%%VITE_WS_PORT%%',
+          NODE_ENV: '%%NODE_ENV%%',
+          LOG_LEVEL: '%%LOG_LEVEL%%'
         };
       </script>  
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Dataisec Platform</title>
   </head>
   <body>
     <div id="root"></div>
